# crosspoint-reader

./: .gitignore  AGENTS.md  README.md  m4-ui-design-monochrome.html  partitions_mofei.csv  platformio.ini
.mofei-fontpacks/: notosans_tc_10.epf  notosans_tc_12.epf  notosans_tc_14.epf  notosans_tc_16.epf  notosans_tc_18.epf  notosans_tc_8.epf
.trellis/: .template-hashes.json  config.yaml
app/: .env.example  ARCHITECTURE.md  README.md  app.json  package-lock.json  package.json
docs/: i18n.md  mofei-x3-x4-install-validation.md  reader-wishlist-future-plan.md
scripts/: build_multilingual_font_pack.py  build_tc_font_pack.py  capture_touch_debug.py  gen_i18n.py  mofei_flash_validate.sh  patch_touch_fallback.py  patch_touch_suppression.py  reset_and_monitor.py  take_screenshot.py  wait_and_monitor.py
simulator/: .gitignore  README.md  package-lock.json  package.json
simulator-ui/: package-lock.json  package.json
simulator/headless/: Cargo.toml
simulator/headless/src/: main.rs
src/: ArcadeProgressStore.cpp  ArcadeProgressStore.h  CrossPointSettings.cpp  CrossPointSettings.h  DashboardShortcutStore.cpp  DashboardShortcutStore.h  DesktopSummaryStore.cpp  DesktopSummaryStore.h  EpubBookmarkStore.cpp  EpubBookmarkStore.h  EpubHighlightStore.cpp  EpubHighlightStore.h  ExternalFontIds.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  ReadLaterStore.cpp  ReadLaterStore.h  SettingsList.h  SleepWallpaperStore.cpp  SleepWallpaperStore.h  StickyNotesStore.cpp  StickyNotesStore.h  StorageFontRegistry.cpp  StorageFontRegistry.h  StudyDeckStore.cpp  (+7 more)
(+340 files in other folders)
